--- a/package.json
+++ b/package.json
@@ -35,11 +35,16 @@
     }
   },
   "dependencies": {
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-preset-stage-0": "^6.24.1",
     "cross-env": "5.1.4",
     "react": "16.3.1",
     "react-dom": "16.3.1",
     "react-hot-loader": "4.0.1",
-    "react-router-dom": "4.2.2"
+    "react-redux": "^5.0.7",
+    "react-router-dom": "4.2.2",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "babel-cli": "6.26.0",
@@ -53,7 +58,6 @@
     "babel-preset-react-boilerplate": "1.1.1",
     "babel-preset-react-hmre": "1.1.1",
     "babel-preset-stage-2": "6.24.1",
-    "copy-webpack-plugin": "4.5.1",
     "css-hot-loader": "1.3.9",
     "css-loader": "0.28.11",
     "enzyme": "3.3.0",
