add jsx jest compatibility

--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
       "**/?(*.)(spec|test).js?(x)"
     ],
     "transform": {
-      "\\.js$": "babel-jest"
+      "\\.(js|jsx)$": "babel-jest"
     }
   },
   "dependencies": {
